Added validation & batch query for game note reactions
